<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5D5DC"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="375dp"
        android:layout_height="503dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Primer numero"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtNro1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Segundo numero"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtNro2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/btSumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sumar" />

        <Button
            android:id="@+id/btRestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Restar" />

        <Button
            android:id="@+id/btMultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Multiplicar" />

        <Button
            android:id="@+id/btDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dividir" />

        <Button
            android:id="@+id/btfactorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Factorial" />

        <Button
            android:id="@+id/btfibonacci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fibonacci" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resultado"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Atras"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:backgroundTint="#1F3742"
        android:text="Atras"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <Button
        android:id="@+id/btn_Salir"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:backgroundTint="#1F3742"
        android:text="Salir"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

</androidx.constraintlayout.widget.ConstraintLayout>