<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5D5DC"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:backgroundTint="#1F3742"
        android:text="Atras"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:backgroundTint="#1F3742"
        android:text="Siguiente"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descripción"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="357dp"
        android:layout_height="219dp"
        android:text="Una calculadora versátil que ofrece funciones básicas como suma, resta, multiplicación y división, junto con opciones avanzadas como el cálculo factorial y la secuencia de Fibonacci. La función factorial calcula el producto de todos los números enteros positivos hasta el número dado. Por ejemplo, el factorial de 5 (5!) es 5x4x3x2x1 = 120. La secuencia de Fibonacci es una serie en la que cada número es la suma de los dos anteriores, comenzando con 0 y 1 (0, 1, 1, 2, 3, 5, 8, 13, etc.)."
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />
</androidx.constraintlayout.widget.ConstraintLayout>